Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78556

Fontawesome fonts do not work in Qml but do work in QWidgets

XMLWordPrintable

    • All
    • f881d00a4f37fcf244be8f93235b9c970aa1a9aa

      A lot of Font Awesome 5 font characters do not work with Qml but work with QWidgets. Maybe this is also related to QTBUG-61925?

      Steps to reproduce:

      1. Run the attached example.
      2. Two widget ToolButtons are shown with correct symbols.
      3. Two Qml ToolButtons are shown, one with the correct symbol, one with a wrong symbol.

        1. awidgets.zip
          536 kB
        2. qawesome.zip
          487 kB
        For Gerrit Dashboard: QTBUG-78556
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            DanielSt Peter Staab
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes