src/platformsupport/fontdatabases/windows/qwindowsfontdatabase.cpp
@@ -1069,18 +1069,16 @@ static bool addFontToDatabase(QString familyName,
 
     QString subFamilyName;
     QString subFamilyStyle;
-    if (ttf) {
-        // Look-up names registered in the font
-        QFontNames canonicalNames = qt_getCanonicalFontNames(logFont);
-        if (qt_localizedName(familyName) && !canonicalNames.name.isEmpty())
-            englishName = canonicalNames.name;
-        if (!canonicalNames.preferredName.isEmpty()) {
-            subFamilyName = familyName;
-            subFamilyStyle = styleName;
-            faceName = familyName; // Remember the original name for later lookups
-            familyName = canonicalNames.preferredName;
-            styleName = canonicalNames.preferredStyle;
-        }
+    // Look-up names registered in the font
+    QFontNames canonicalNames = qt_getCanonicalFontNames(logFont);
+    if (qt_localizedName(familyName) && !canonicalNames.name.isEmpty())
+        englishName = canonicalNames.name;
+    if (!canonicalNames.preferredName.isEmpty()) {
+        subFamilyName = familyName;
+        subFamilyStyle = styleName;
+        faceName = familyName; // Remember the original name for later lookups
+        familyName = canonicalNames.preferredName;
+        styleName = canonicalNames.preferredStyle;
     }
 
     QSupportedWritingSystems writingSystems;
