src/platformsupport/fontdatabases/windows/qwindowsfontdatabase_ft.cpp
@@ -215,17 +215,15 @@ static bool addFontToDatabase(QString familyName,
 
     QString subFamilyName;
     QString subFamilyStyle;
-    if (ttf) {
-        // Look-up names registered in the font
-        QFontNames canonicalNames = qt_getCanonicalFontNames(logFont);
-        if (qt_localizedName(familyName) && !canonicalNames.name.isEmpty())
-            englishName = canonicalNames.name;
-        if (!canonicalNames.preferredName.isEmpty()) {
-            subFamilyName = familyName;
-            subFamilyStyle = styleName;
-            familyName = canonicalNames.preferredName;
-            styleName = canonicalNames.preferredStyle;
-        }
+    // Look-up names registered in the font
+    QFontNames canonicalNames = qt_getCanonicalFontNames(logFont);
+    if (qt_localizedName(familyName) && !canonicalNames.name.isEmpty())
+        englishName = canonicalNames.name;
+    if (!canonicalNames.preferredName.isEmpty()) {
+        subFamilyName = familyName;
+        subFamilyStyle = styleName;
+        familyName = canonicalNames.preferredName;
+        styleName = canonicalNames.preferredStyle;
     }
 
     QSupportedWritingSystems writingSystems;
